# challenge

./: .env.local.example  .gitignore  DEPLOYMENT.md  HOW_TO_USE_AGENTS.md  PROJECT_CONTEXT.md  README.md  TEMPLATE_CHANGELOG.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.claude/agents/: backend-dev.md  devops.md  frontend-dev.md  qa-engineer.md  requirements-engineer.md  solution-architect.md
.github/workflows/: ci.yml  release.yml
features/: PROJ-1-desktop-app-shell.md  PROJ-10-chat-context-rules.md  PROJ-11-settings-panel.md  PROJ-12-error-handling.md  PROJ-18-markdown-transcription-archive.md  PROJ-2-global-hotkey-system.md  PROJ-3-audio-recording.md  PROJ-4-whisper-integration.md  PROJ-5-floating-overlay.md  PROJ-6-direct-text-insert.md  PROJ-7-ai-auto-edits.md  PROJ-8-context-awareness-engine.md  PROJ-9-email-context-rules.md  README.md
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  audio.rs  context.rs  lib.rs  main.rs  ollama.rs  text_insert.rs  whisper.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/overlay/: layout.tsx  page.tsx
src/app/settings/: page.tsx
src/components/: accessibility-permission-dialog.tsx  archive-settings.tsx  chat-settings.tsx  context-settings.tsx  crash-notification.tsx  email-settings.tsx  error-details-modal.tsx  general-settings.tsx  hotkey-settings.tsx  microphone-permission-dialog.tsx  microphone-settings.tsx  ollama-settings.tsx  privacy-settings.tsx  providers.tsx  recording-indicator.tsx  recording-overlay.tsx  settings-panel.tsx  status-indicator.tsx  text-insert-settings.tsx  whisper-settings.tsx
src/components/ui/: button.tsx  card.tsx  checkbox.tsx  command.tsx  dropdown-menu.tsx  navigation-menu.tsx  popover.tsx  sidebar.tsx  sonner.tsx  tooltip.tsx
src/contexts/: error-context.tsx
src/hooks/: use-app-status.ts  use-audio-recording.ts  use-autostart.ts  use-context.ts  use-crash-recovery.ts  use-error.ts  use-hotkey.ts  use-ollama.ts  use-overlay-window.ts  use-system-notification.ts  use-tauri.ts  use-text-insert.ts  use-whisper.ts
src/lib/: app-error.ts  app-toast.ts  supabase.ts
