[package]
name = "evervoice"
version = "1.0.0"
description = "EverVoice Desktop App - Voice to Text with AI"
authors = ["EverVoice Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dirs = "5.0"
chrono = "0.4"
# Audio recording dependencies (PROJ-3)
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
uuid = { version = "1.8", features = ["v4"] }
thiserror = "1.0"
fs2 = "0.4"  # For disk space checking (BUG-3 fix)

# Whisper.cpp integration dependencies (PROJ-4)
whisper-rs = "0.11"  # Rust bindings for whisper.cpp
reqwest = { version = "0.11", features = ["stream"] }  # HTTP downloads with progress
sha2 = "0.10"  # Hash verification for downloaded models
futures-util = "0.3"  # For async stream processing
tokio = { version = "1", features = ["sync", "fs"] }  # Async runtime for downloads

# Text Insert dependencies (PROJ-6)
arboard = "3"  # Cross-platform clipboard (better than clipboard crate)
enigo = "0.2"  # Cross-platform keyboard simulation

# Ollama dependencies (PROJ-7)
url = "2.5"  # URL parsing and validation for SSRF protection
